--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@vitejs/plugin-react": "^4.2.1",
         "postcss-preset-env": "^9.5.11",
         "sass": "^1.76.0",
-        "vite": "^5.2.0"
+        "vite": "^5.2.0",
+        "vite-plugin-svgr": "^4.2.0"
     }
 }
